--- a/index.html
+++ b/index.html
@@ -334,6 +334,7 @@
   </section>
   <section class="tester clearfix">
     <div class="ibeam">
+      <img class="static" src="assets/ibeam.svg">
       <img class="moving" src="assets/ibeam.svg">
     </div>
     <div class="text">
@@ -345,7 +346,7 @@
         <span>VROT</span>
         <input class="slider" type="range" min="-45" max="45" value="0">
       </div>
-      <input class="string neon" type="text" value="AaBbCcDdEeFfGgHhIiJjKkLlMmOoPpQqRrSsTtUuVvWwXxYyZz"></input>
+      <input spellcheck="false" class="string neon" type="text" value="AaBbCcDdEeFfGgHhIiJjKkLlMmOoPpQqRrSsTtUuVvWwXxYyZz"></input>
     </div>
   </section>
 
@@ -608,7 +609,8 @@
   </section>
   <section class="tester clearfix">
     <div class="ibeam">
-      <img src="assets/ibeam.svg">
+      <img class="static" src="assets/ibeam.svg">
+      <img class="moving" src="assets/ibeam.svg">
     </div>
     <div class="text">
       <div class="slider-wrapper hrot">
@@ -619,7 +621,7 @@
         <span>VROT</span>
         <input class="slider" type="range" min="-45" max="45" value="0">
       </div>
-      <input class="string prism" type="text" value="AaBbCcDdEeFfGgHhIiJjKkLlMmOoPpQqRrSsTtUuVvWwXxYyZz"></input>
+      <input spellcheck="false" class="string prism" type="text" value="AaBbCcDdEeFfGgHhIiJjKkLlMmOoPpQqRrSsTtUuVvWwXxYyZz"></input>
     </div>
   </section>
 
@@ -883,7 +885,9 @@
   </section>
   <section class="tester clearfix">
     <div class="ibeam">
-      <img src="assets/ibeam.svg">
+      <img class="static" src="assets/ibeam.svg">
+      <img class="moving" src="assets/ibeam.svg">
+
     </div>
     <div class="text">
       <div class="slider-wrapper hrot">
@@ -894,7 +898,7 @@
         <span>VROT</span>
         <input class="slider" type="range" min="-45" max="45" value="0">
       </div>
-      <input class="string warp" type="text" value="AaBbCcDdEeFfGgHhIiJjKkLlMmOoPpQqRrSsTtUuVvWwXxYyZz"></input>
+      <input spellcheck="false" class="string warp" type="text" value="AaBbCcDdEeFfGgHhIiJjKkLlMmOoPpQqRrSsTtUuVvWwXxYyZz"></input>
     </div>
   </section>
 
