added header from prototype, added more separators to relieve jolt feeling

--- a/index.html
+++ b/index.html
@@ -21,29 +21,34 @@
       <li><a href="#" class="camera">☺</a></li>
     </ul>
   </nav>
-  <!-- <section class="subnav small-only">
-    <ul>
-      <li><a href="https://fonts.google.com/" target="_blank" class="google-fonts">Google Fonts</a></li>
-      <li><a href="https://github.com/andyclymer/Tilt-Typeface" target="_blank" class="github">GitHub</a></li>
-    </ul>
-  </section> -->
   <section class="hero">
-    <span class="chars char-0 neon">N</span><span class="chars char-1 prism">P</span><span class="chars char-2 warp">W</span>
+
+    <div class="hero-text">
+      <span class="char-0">N</span><span class="char-1">P</span><span class="char-2">W</span>
+    </div>
+    <div class="hrot">Horizontal Rotation: <span class="hrot_val"></span></div>
+    <div class="vrot">Vertical Rotation: <span class="vrot_val"></span></div>
+    <svg height="100vh" width="100vw">
+      <circle class="circle_1" cx="-50" cy="-50" r="8"></circle>
+      <line class="line_1" x1="0" y1="0" x2="0" y2="0"></line>
+    </svg>
+
+    <!-- <span class="chars char-0 neon">N</span><span class="chars char-1 prism">P</span><span class="chars char-2 warp">W</span>
     <div class="vars">
       <span class="hrot"><span>Horizontal Rotation:</span> <span class="values hrot_val">00</span></span>
       <span class="vrot"><span>Vertical Rotation:</span> <span class="values vrot_val">-00</span></span>
-    </div>
-    <!-- <svg>
-      <circle class="circle_1" cx="-50" cy="-50" r="8"></circle>
-      <line class="line_1" x1="0" y1="0" x2="0" y2="0"></line>
-    </svg> -->
+    </div> -->
+
   </section>
+  <div class="separator"></div>
   <section class="scroller neon">
     Fluff and Fold Coin-Op Laundromat
   </section>
+  <div class="separator"></div>
   <section class="scroller prism">
     Original Uptown Luncheonette
   </section>
+  <div class="separator"></div>
   <section class="scroller warp">
     Hardware Supply and Service
   </section>
@@ -938,13 +943,9 @@
           Andy Clymer
         </p>
         <p>
-          Anyone else to credit?<br>
-          Someone Else
-        </p>
-        <p>
           Website by<br>
           Math Practice:<br>
-          E Roon Kang, Wonyoung So
+          E Roon Kang, Nico Chilla, Wonyoung So
         </p>
       </div>
       <div class="fineprint">
