--- a/index.html
+++ b/index.html
@@ -40,15 +40,15 @@
     </div> -->
 
   </section>
-  <div class="separator"></div>
+  <div class="separator half"></div>
   <section class="scroller neon">
     Fluff and Fold Coin-Op Laundromat
   </section>
-  <div class="separator"></div>
+  <div class="separator half"></div>
   <section class="scroller prism">
     Original Uptown Luncheonette
   </section>
-  <div class="separator"></div>
+  <div class="separator half"></div>
   <section class="scroller warp">
     Hardware Supply and Service
   </section>
