--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <meta name="viewport" charset="UTF-8" content="width=device-width, initial-scale=1">
   <title>Tilt</title>
   <link rel="stylesheet" type="text/css" href="assets/style.css">
 </head>
@@ -40,15 +41,15 @@
     </div> -->
 
   </section>
-  <div class="separator half"></div>
+  <div class="separator"></div>
   <section class="scroller neon">
     Fluff and Fold Coin-Op Laundromat
   </section>
-  <div class="separator half"></div>
+  <!-- <div class="separator half"></div> -->
   <section class="scroller prism">
     Original Uptown Luncheonette
   </section>
-  <div class="separator half"></div>
+  <!-- <div class="separator half"></div> -->
   <section class="scroller warp">
     Hardware Supply and Service
   </section>
@@ -458,7 +459,7 @@
         </p>
       </span>
       <span class="inner">
-        <p class="m save">TO <br>SERVE <br>THOSE WHO <br>SAVE</p>
+        <p class="m save">TO <br>SERVE <br><span class='break-mobile'>THOSE</span>WHO <br class='remove-mobile'>SAVE</p>
       </span>
     </div>
     <div class="restroom sign">
