mobile fixes and beginning of dragger

--- a/index.html
+++ b/index.html
@@ -22,13 +22,19 @@
       <li><a href="#" class="camera">☺</a></li>
     </ul>
   </nav>
+  <div id="tilt-control-wrapper">
+    <div id="tilt-control">
+      
+    </div>
+  </div>
+
   <section class="hero">
 
     <div class="hero-text">
       <span class="char-0">N</span><span class="char-1">P</span><span class="char-2">W</span>
     </div>
-    <div class="hrot">Horizontal Rotation: <span class="hrot_val"></span></div>
-    <div class="vrot">Vertical Rotation: <span class="vrot_val"></span></div>
+    <div class="hrot">Horizontal Rotation: <span class="hrot_val">0.00°</span></div>
+    <div class="vrot">Vertical Rotation: <span class="vrot_val">0.00°</span></div>
     <svg height="100vh" width="100vw">
       <circle class="circle_1" cx="-50" cy="-50" r="8"></circle>
       <line class="line_1" x1="0" y1="0" x2="0" y2="0"></line>
@@ -912,7 +918,7 @@
 
   <section class="footer clearfix">
     <div class="text">
-      <h2>Tilt is a family of three variable fonts, based on styles of dimensional lettering that you might find in a storefront. It was designed by Andy Clymer in 2019.</h2>
+      <h2 class="big">Tilt is a family of three variable fonts, based on styles of dimensional lettering that you might find in a storefront. It was designed by Andy Clymer in 2019.</h2>
       <p>Inspiration for the design came from one completely average neon sign, spotted in the front window of a laundromat in New York City. The sign revealed something that should have been completely obvious but that I hadn’t ever noticed.</p>
       <p>Neon signs are of course built to be viewed straight-on, from this angle the shape of their characters and symbols match as closely as possible to the model that the sign-maker is following. We take it as a general understanding that when viewed off-center, the sign exposes the twisted path that the neon tubes had to take to form the intended image. A good sign-maker would try to minimize this distortion, ideally the sign would at least pass as being readable from any angle.</p>
       <p>However, this particular sign, at 188 3rd Ave., seemed different. From the front it looked completely static, like any ordinary sans-serif. However, the side form of the digits looked fast and dynamic, and almost hand written. I saw something that looked like it was more than just distorted neon tubing, a new letterform that could have been made intentionally (even though it surely was not).</p>
