fixed global mobile tracking

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
   </nav>
   <div id="tilt-control-wrapper">
     <div id="tilt-control">
-      
+
     </div>
   </div>
 
-  <section class="hero">
+  <section class="hero step" data-type="hero">
 
     <div class="hero-text">
       <span class="char-0">N</span><span class="char-1">P</span><span class="char-2">W</span>
