--- a/index.html
+++ b/index.html
@@ -27,7 +27,16 @@
       <li><button href="#" class="camera">☺</button></li>
     </ul>
   </nav>
+  <div id="control-svg-wrapper">
+    <div class="svg-wrap">
+      <svg height="100vh" width="100vw">
+        <circle class="circle_2" cx="0" cy="0" r="10"></circle>
+        <line class="line_1" x1="0" y1="0" x2="0" y2="0"></line>
+      </svg>
+    </div>
+  </div>
   <div id="tilt-control-wrapper">
+
     <div id="tilt-control">
 
     </div>
