simple scroll effect

--- a/index.html
+++ b/index.html
@@ -74,15 +74,15 @@
   </section>
   <div class="separator"></div>
   <section class="scroller neon">
-    Fluff and Fold Coin-Op Laundromat
+    Fluff&nbsp;and&nbsp;Fold&nbsp;Coin-Op&nbsp;Laundromat
   </section>
   <!-- <div class="separator half"></div> -->
   <section class="scroller prism">
-    Original Uptown Luncheonette
+    Original&nbsp;Uptown&nbsp;Luncheonette
   </section>
   <!-- <div class="separator half"></div> -->
   <section class="scroller warp">
-    Hardware Supply and Service
+    Hardware&nbsp;Supply&nbsp;and&nbsp;Service
   </section>
 
   <div class="separator"></div>
