--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     <div id="facecam">
       <video width="400" height="300"  preload="auto" loop playsinline autoplay></video>
       <svg viewBox="0 0 400 300">
+        <circle id="bubble" cx="0" cy="0" r="0" vector-effect="non-scaling-stroke"></circle>
         <polyline id="face_1" points="0,0 0,0" vector-effect="non-scaling-stroke"/>
         <polyline id="face_2" points="0,0 0,0" vector-effect="non-scaling-stroke"/>
         <polyline id="face_3" points="0,0 0,0" vector-effect="non-scaling-stroke"/>
@@ -52,6 +53,7 @@
         <polyline id="face_9" points="0,0 0,0" vector-effect="non-scaling-stroke"/>
         <polyline id="face_10" points="0,0 0,0" vector-effect="non-scaling-stroke"/>
         <polyline id="face_11" points="0,0 0,0" vector-effect="non-scaling-stroke"/>
+
       </svg>
     </div>
 
