--- a/index.html
+++ b/index.html
@@ -33,8 +33,18 @@
   <div id="tilt-control-wrapper">
 
     <div id="tilt-control">
-
+      <div class="eye left">
+        <div class="eyelid top"></div>
+        <div class="pupil"></div>
+        <div class="eyelid bottom"></div>
+      </div>
+      <div class="eye right">
+        <div class="eyelid top"></div>
+        <div class="pupil"></div>
+        <div class="eyelid bottom"></div>
+      </div>
     </div>
+
   </div>
 
   <section class="hero step" data-type="hero">
