--- a/index.html
+++ b/index.html
@@ -7,6 +7,27 @@
   <link rel="stylesheet" type="text/css" href="assets/style.css">
 </head>
 <body>
+  <div id="facecam">
+    <video width="400" height="300"  preload="auto" loop playsinline autoplay></video>
+    <div class="svg-wrapper">
+      <svg viewBox="-200 -150 800 600" width="800" height="600">
+        <circle id="bubble" cx="0" cy="0" r="0" vector-effect="non-scaling-stroke"></circle>
+        <polyline id="face_1" points="0,0 0,0" vector-effect="non-scaling-stroke"/>
+        <polyline id="face_2" points="0,0 0,0" vector-effect="non-scaling-stroke"/>
+        <polyline id="face_3" points="0,0 0,0" vector-effect="non-scaling-stroke"/>
+        <polyline id="face_4" points="0,0 0,0" vector-effect="non-scaling-stroke"/>
+        <polyline id="face_5" points="0,0 0,0" vector-effect="non-scaling-stroke"/>
+        <polyline id="face_6" points="0,0 0,0" vector-effect="non-scaling-stroke"/>
+        <polyline id="face_7" points="0,0 0,0" vector-effect="non-scaling-stroke"/>
+        <polyline id="face_8" points="0,0 0,0" vector-effect="non-scaling-stroke"/>
+        <polyline id="face_9" points="0,0 0,0" vector-effect="non-scaling-stroke"/>
+        <polyline id="face_10" points="0,0 0,0" vector-effect="non-scaling-stroke"/>
+        <polyline id="face_11" points="0,0 0,0" vector-effect="non-scaling-stroke"/>
+
+      </svg>
+    </div>
+
+  </div>
   <nav>
     <h1><a href="#">Tilt</a></h1>
     <ul class="primary">
@@ -48,24 +69,7 @@
   </div>
 
   <section class="hero step" data-type="hero">
-    <div id="facecam">
-      <video width="400" height="300"  preload="auto" loop playsinline autoplay></video>
-      <svg viewBox="0 0 400 300">
-        <circle id="bubble" cx="0" cy="0" r="0" vector-effect="non-scaling-stroke"></circle>
-        <polyline id="face_1" points="0,0 0,0" vector-effect="non-scaling-stroke"/>
-        <polyline id="face_2" points="0,0 0,0" vector-effect="non-scaling-stroke"/>
-        <polyline id="face_3" points="0,0 0,0" vector-effect="non-scaling-stroke"/>
-        <polyline id="face_4" points="0,0 0,0" vector-effect="non-scaling-stroke"/>
-        <polyline id="face_5" points="0,0 0,0" vector-effect="non-scaling-stroke"/>
-        <polyline id="face_6" points="0,0 0,0" vector-effect="non-scaling-stroke"/>
-        <polyline id="face_7" points="0,0 0,0" vector-effect="non-scaling-stroke"/>
-        <polyline id="face_8" points="0,0 0,0" vector-effect="non-scaling-stroke"/>
-        <polyline id="face_9" points="0,0 0,0" vector-effect="non-scaling-stroke"/>
-        <polyline id="face_10" points="0,0 0,0" vector-effect="non-scaling-stroke"/>
-        <polyline id="face_11" points="0,0 0,0" vector-effect="non-scaling-stroke"/>
 
-      </svg>
-    </div>
 
     <div class="hero-text">
       <span class="char-0">N</span><span class="char-1">P</span><span class="char-2">W</span>
@@ -84,7 +88,7 @@
     </div> -->
 
   </section>
-  <div class="separator"></div>
+  <div class="separator remove-mobile"></div>
   <section class="scroller neon">
     Fluff&nbsp;and&nbsp;Fold&nbsp;Coin-Op&nbsp;Laundromat
   </section>
