--- a/index.html
+++ b/index.html
@@ -387,11 +387,11 @@
     </div>
     <div class="text">
       <div class="slider-wrapper hrot">
-        <span>HROT</span>
+        <span class="no-pointer">HROT</span>
         <input class="slider" type="range" min="-45" max="45" value="0">
       </div>
       <div class="slider-wrapper vrot">
-        <span>VROT</span>
+        <span class="no-pointer">VROT</span>
         <input class="slider" type="range" min="-45" max="45" value="0">
       </div>
       <input spellcheck="false" class="string neon" type="text" value="AaBbCcDdEeFfGgHhIiJjKkLlMmOoPpQqRrSsTtUuVvWwXxYyZz"></input>
@@ -665,11 +665,11 @@
     </div>
     <div class="text">
       <div class="slider-wrapper hrot">
-        <span>HROT</span>
+        <span class="no-pointer">HROT</span>
         <input class="slider" type="range" min="-45" max="45" value="0">
       </div>
       <div class="slider-wrapper vrot">
-        <span>VROT</span>
+        <span class="no-pointer">VROT</span>
         <input class="slider" type="range" min="-45" max="45" value="0">
       </div>
       <input spellcheck="false" class="string prism" type="text" value="AaBbCcDdEeFfGgHhIiJjKkLlMmOoPpQqRrSsTtUuVvWwXxYyZz"></input>
@@ -945,11 +945,11 @@
     </div>
     <div class="text">
       <div class="slider-wrapper hrot">
-        <span>HROT</span>
+        <span class="no-pointer">HROT</span>
         <input class="slider" type="range" min="-45" max="45" value="0">
       </div>
       <div class="slider-wrapper vrot">
-        <span>VROT</span>
+        <span class="no-pointer">VROT</span>
         <input class="slider" type="range" min="-45" max="45" value="0">
       </div>
       <input spellcheck="false" class="string warp" type="text" value="AaBbCcDdEeFfGgHhIiJjKkLlMmOoPpQqRrSsTtUuVvWwXxYyZz"></input>
