facecam reversion/experiments

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
   <section class="hero step" data-type="hero">
 
 
+
     <div class="hero-text">
       <span class="char-0">N</span><span class="char-1">P</span><span class="char-2">W</span>
     </div>
@@ -52,11 +53,12 @@
       <line class="line_1" x1="0" y1="0" x2="0" y2="0"></line>
       <circle class="circle_1" cx="-50" cy="-50" r="16"></circle>
     </svg>
+  
     <div id="facecam">
       <video width="400" height="300"  preload="auto" loop playsinline autoplay></video>
       <div class="svg-wrapper">
-        <svg viewBox="-200 -150 800 600" width="800" height="600">
-          <circle id="bubble" cx="0" cy="0" r="0" vector-effect="non-scaling-stroke"></circle>
+        <svg viewBox="0 0 400 300" width="400" height="300">
+          <!-- <circle id="bubble" cx="0" cy="0" r="0" vector-effect="non-scaling-stroke"></circle> -->
           <polyline id="face_1" points="0,0 0,0" vector-effect="non-scaling-stroke"/>
           <polyline id="face_2" points="0,0 0,0" vector-effect="non-scaling-stroke"/>
           <polyline id="face_3" points="0,0 0,0" vector-effect="non-scaling-stroke"/>
@@ -73,11 +75,6 @@
       </div>
 
     </div>
-    <!-- <span class="chars char-0 neon">N</span><span class="chars char-1 prism">P</span><span class="chars char-2 warp">W</span>
-    <div class="vars">
-      <span class="hrot"><span>Horizontal Rotation:</span> <span class="values hrot_val">00</span></span>
-      <span class="vrot"><span>Vertical Rotation:</span> <span class="values vrot_val">-00</span></span>
-    </div> -->
 
   </section>
   <div class="separator remove-mobile"></div>
