simplified facecam track

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div id="facecam">
       <video width="400" height="300"  preload="auto" loop playsinline autoplay></video>
       <div class="svg-wrapper">
-        <svg viewBox="0 0 400 300" width="400" height="300">
+        <svg viewBox="0 0 400 300">
           <!-- <circle id="bubble" cx="0" cy="0" r="0" vector-effect="non-scaling-stroke"></circle> -->
           <polyline id="face_1" points="0,0 0,0" vector-effect="non-scaling-stroke"/>
           <polyline id="face_2" points="0,0 0,0" vector-effect="non-scaling-stroke"/>
