small mobile layout fixes

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" charset="UTF-8" content="width=device-width, initial-scale=1">
   <meta name="description" content="Tilt is a family of three variable fonts, based on styles of dimensional lettering that you might find in a storefront, designed by Andy Clymer in 2019.">
   <meta name="og:url" content="https://math-practice.github.io/tilt-specimen">
-  <meta name="og:title" content="Tilt: Neon, Prism, Warp">
+  <meta name="og:title" content="Tilt Typeface Family: Three-dimensional Variable Fonts">
   <meta name="og:description" content="Tilt is a family of three variable fonts, based on styles of dimensional lettering that you might find in a storefront, designed by Andy Clymer in 2019.">
   <meta name="og:site_name" content="Google Fonts">
   <meta name="article:author" content="Friends of Google Fonts">
@@ -17,7 +17,7 @@
   <meta name="og:image:type" content="image/png">
   <meta name="og:image:width" content="1200">
   <meta name="og:image:height" content="630">
-  <title>Tilt: Neon, Prism, Warp</title>
+  <title>Tilt Typeface Family: Three-dimensional Variable Fonts</title>
   <link rel="stylesheet" type="text/css" href="assets/style.css">
   <link id="favicon" rel="icon" type="image/png" href="assets/favicon.png">
 </head>
