--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
     </svg>
   
     <div id="facecam">
+      <div class="alert">
+        Finding your face<span class="dot-dot-dot">...</span>
+      </div>
       <video width="400" height="300"  preload="auto" loop playsinline autoplay></video>
       <div class="svg-wrapper">
         <svg viewBox="0 0 400 300">
