--- a/index.html
+++ b/index.html
@@ -55,9 +55,7 @@
     </svg>
   
     <div id="facecam">
-      <div class="alert">
-        Finding your face<span class="dot-dot-dot">...</span>
-      </div>
+      
       <video width="400" height="300"  preload="auto" loop playsinline autoplay></video>
       <div class="svg-wrapper">
         <svg viewBox="0 0 400 300">
@@ -74,6 +72,9 @@
           <polyline id="face_10" points="0,0 0,0" vector-effect="non-scaling-stroke"/>
           <polyline id="face_11" points="0,0 0,0" vector-effect="non-scaling-stroke"/>
         </svg>
+      </div>
+      <div class="alert">
+        <span>Finding your face</span>
       </div>
     </div>
   </section>
