--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
   <meta name="viewport" charset="UTF-8" content="width=device-width, initial-scale=1">
   <meta name="description" content="Tilt is a family of three variable fonts, based on styles of dimensional lettering that you might find in a storefront, designed by Andy Clymer in 2019.">
   <meta name="og:url" content="https://math-practice.github.io/tilt-specimen">
-  <meta name="og:title" content="Tilt Typeface Family: Three-dimensional Variable Fonts">
+  <meta name="og:title" content="TILT | Neon, Prism, Warp">
   <meta name="og:description" content="Tilt is a family of three variable fonts, based on styles of dimensional lettering that you might find in a storefront, designed by Andy Clymer in 2019.">
   <meta name="og:site_name" content="Google Fonts">
   <meta name="article:author" content="Friends of Google Fonts">
   <meta name="twitter:creator" content="@googlefonts">
   <meta name="twitter:site" content="@googlefonts">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:image" content="assets/og-img.png">
-  <meta name="og:image" content="assets/og-img.png">
+  <meta name="twitter:image" content="https://math-practice.github.io/tilt-specimen/assets/og-img.png">
+  <meta name="og:image" content="https://math-practice.github.io/tilt-specimen/assets/og-img.png">
   <meta name="og:image:type" content="image/png">
   <meta name="og:image:width" content="1200">
   <meta name="og:image:height" content="630">
-  <title>Tilt Typeface Family: Three-dimensional Variable Fonts</title>
+  <title>TILT | Neon, Prism, Warp</title>
   <link rel="stylesheet" type="text/css" href="assets/style.css">
-  <link id="favicon" rel="icon" type="image/png" href="assets/favicon.png">
+  <link id="favicon" rel="icon" type="image/png" href="https://math-practice.github.io/tilt-specimen/assets/favicon.png">
 </head>
 <body>
   <nav>
