mobile anchor link fix

--- a/index.html
+++ b/index.html
@@ -24,10 +24,15 @@
 <body>
   <nav>
     <h1><a href="#">Tilt</a></h1>
-    <ul class="primary">
+    <ul class="primary large-only">
       <li><a href="#neon">Neon</a></li>
       <li><a href="#prism">Prism</a></li>
       <li><a href="#warp">Warp</a></li>
+    </ul>
+    <ul class="primary small-only">
+      <li><a href="#neon-sm">Neon</a></li>
+      <li><a href="#prism-sm">Prism</a></li>
+      <li><a href="#warp-sm">Warp</a></li>
     </ul>
     <ul class="secondary large-only">
       <li><a href="https://fonts.google.com/" target="_blank" class="google-fonts">Google Fonts</a></li>
@@ -465,7 +470,7 @@
     </div>
   </section>
   <section class="signs small-only large prism clearfix">
-    <div class="anchor" id="prism"></div>
+    <div class="anchor" id="prism-sm"></div>
     <div class="grand-central sign">
       <span class="inner">
         <p class="l">GRAND<br>CENTRAL<br>TERMINAL</p>
@@ -752,7 +757,7 @@
     </div>
   </section>
   <section class="signs small-only warp clearfix">
-    <div class="anchor" id="warp"></div>
+    <div class="anchor" id="warp-sm"></div>
     <div class="dont-block sign">
       <span class="inner">
         <p class="l">DON’T<br>BLOCK<br>THE BOX</p>
