--- a/index.html
+++ b/index.html
@@ -964,13 +964,42 @@
       <h2 class="big">Tilt is a family of three variable fonts, based on styles of dimensional lettering that you might find in a storefront. It was designed by Andy Clymer in 2019.</h2>
       <p>Inspiration for the design came from one completely average neon sign, spotted in the front window of a laundromat in New York City. The sign revealed something that should have been completely obvious but that I hadn’t ever noticed.</p>
       <p>Neon signs are of course built to be viewed straight-on, from this angle the shape of their characters and symbols match as closely as possible to the model that the sign-maker is following. We take it as a general understanding that when viewed off-center, the sign exposes the twisted path that the neon tubes had to take to form the intended image. A good sign-maker would try to minimize this distortion, ideally the sign would at least pass as being readable from any angle.</p>
-      <p>However, <a href="#">this particular sign 📷</a>, at 188 3rd Ave., seemed different. From the front it looked completely static, like any ordinary sans-serif. However, the side form of the digits looked fast and dynamic, and almost hand written. I saw something that looked like it was more than just distorted neon tubing, a new letterform that could have been made intentionally (even though it surely was not).</p>
+      <p>However, this particular sign, at 188 3rd Ave., seemed different. From the front it looked completely static, like any ordinary sans-serif. However, the side form of the digits looked fast and dynamic, and almost hand written. I saw something that looked like it was more than just distorted neon tubing, a new letterform that could have been made intentionally (even though it surely was not).</p>
+      <figure>
+        <img src="assets/img/LaundromatStorefront-2017-BW-2x.jpg">
+        <img src="assets/img/NeonSign-Digits.gif">
+      </figure>
+      <figcaption class="fineprint">
+        <span>↑</span>188 3rd Ave., New York, 2019
+      </figcaption>
       <p>With variable fonts on the mind, I thought it was kind of amazing how the physical form of a common sans-serif could inadvertently blend into something that looked like graffiti lettering.</p>
       <p>I sent a quick snap of the sign to a few friends, “<i class="can-your">can your #varfont do this?</i>”, and kept moving, but I couldn’t ignore it — from a technological standpoint I had to figure out how exactly a variable font could do this. It took most of 2019, and along with a lot of custom tooling in RoboFont to be able to draw in the third dimension, I wound up with Tilt.</p>
       <p>To design the typeface, I put myself in the shoes of the sign-maker and started by drawing the letter model of a geometric sans serif, with the intention that it would only be used as a guide to build up the neon letterforms. It’s a familiar style, and one that’s easy to find in lettering manuals — variations have been taught as part of the sign-making trade for decades. The actual neon sign that inspired the design looks like it may have started from Helvetica, but I wanted to imagine that the Neon style of Tilt was first brush-lettered as a reference for the final neon sign, and wasn’t related to any single typeface in particular.</p>
+      <figure>
+        <img src="assets/img/LetteringForAdvertising-2x.jpg">
+      </figure>
+      <figcaption class="fineprint">
+        <span>↑</span>“Lettering for Advertising”, Mortimer Leach, 1956
+      </figcaption>
       <p>Aside from the <a href="#neon">Tilt Neon</a> style, now that I had drawn a full sans-serif to use as a guide, I ended up finding two more 3D forms that I could get out of the same model. Like the Neon, these two other styles are based on dimensional letters you might find on a storefront, but are styles that also show up in other places in type and lettering history.</p>
       <p><a href="#prism">Tilt Prism</a> references the lettering that you might find vacuum-formed in plastic on a theater marquee, or cast in bronze at the entrance to a bank. At the same time, it’s also related to the prismatic forms that were so common to find in 18th-century wood type and sign-painting manuals.</p>
+      <figure>
+        <img src="assets/img/Market-2019-BW-2x.jpg">
+        <img src="assets/img/Lettres-Prismatic-1898-BW-2x.jpg">
+      </figure>
+      <figcaption class="fineprint">
+        <span>↑↑</span>East Village, New York, 2019<br>
+        <span>↑</span>“Lettres Prismatic”, Monrocq Freres, Paris, 1898
+      </figcaption>
       <p><a href="#warp">Tilt Warp</a> takes a different approach, now that the classic sign-making techniques of bending neon and hand lettering are disappearing from modern storefronts, being replaced by quick and cheap vinyl sticker lettering. While it’s intended to be a flat reproduction style, the peeling stickers take a three-dimensional form of their own. Once again, the lettering artists long before our own time envisioned this trend and had cut their own examples of warped letters.</p>
+      <figure>
+        <img src="assets/img/Stickers-2019-2x.jpg">
+        <img src="assets/img/Harrild-1906-BW-2x.jpg">
+      </figure>
+      <figcaption class="fineprint">
+        <span>↑↑</span>Queens, New York, 2019<br>
+        <span>↑</span>“Concave”, Harrild and Sons, London, 1906
+      </figcaption>
       <p>With the advent of the variable font format, I like to think that a designer is freed from the traditional layout of a family of type. Tilt doesn’t give a designer variable control over the parameters you might expect — such as weight and width — but instead lets you dial in the “Horizontal Rotation” (HROT) and “Vertical Rotation” (VROT) of the tilting letterforms. In place of a range of weights, the Neon style has been drawn to function as a Regular style in text, and Tilt Warp is heavy enough to work as a companion Bold when necessary.</p>
     </div>
     <div class="credit">
