--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
         <li><p class="glyph">*</p><p class="glyph-name neon">asterisk</p></li>
         <li><p class="glyph">+</p><p class="glyph-name neon">plus</p></li>
         <li><p class="glyph">,</p><p class="glyph-name neon">comma</p></li>
-        <li><p class="glyph">-</p><p class="glyph-name neon">huphen</p></li>
+        <li><p class="glyph">-</p><p class="glyph-name neon">hyphen</p></li>
         <li><p class="glyph">,</p><p class="glyph-name neon">comma</p></li>
         <li><p class="glyph">/</p><p class="glyph-name neon">slash</p></li>
         <li><p class="glyph">@</p><p class="glyph-name neon">at</p></li>
@@ -552,7 +552,7 @@
         <li><p class="glyph">*</p><p class="glyph-name neon">asterisk</p></li>
         <li><p class="glyph">+</p><p class="glyph-name neon">plus</p></li>
         <li><p class="glyph">,</p><p class="glyph-name neon">comma</p></li>
-        <li><p class="glyph">-</p><p class="glyph-name neon">huphen</p></li>
+        <li><p class="glyph">-</p><p class="glyph-name neon">hyphen</p></li>
         <li><p class="glyph">,</p><p class="glyph-name neon">comma</p></li>
         <li><p class="glyph">/</p><p class="glyph-name neon">slash</p></li>
         <li><p class="glyph">@</p><p class="glyph-name neon">at</p></li>
@@ -831,7 +831,7 @@
         <li><p class="glyph">*</p><p class="glyph-name neon">asterisk</p></li>
         <li><p class="glyph">+</p><p class="glyph-name neon">plus</p></li>
         <li><p class="glyph">,</p><p class="glyph-name neon">comma</p></li>
-        <li><p class="glyph">-</p><p class="glyph-name neon">huphen</p></li>
+        <li><p class="glyph">-</p><p class="glyph-name neon">hyphen</p></li>
         <li><p class="glyph">,</p><p class="glyph-name neon">comma</p></li>
         <li><p class="glyph">/</p><p class="glyph-name neon">slash</p></li>
         <li><p class="glyph">@</p><p class="glyph-name neon">at</p></li>
